tests/golden/parse_errors/import_nested_block.err
Parse error at <repo>/tests/golden/parse_errors/import_nested_block.cd:2:3: `import` is only allowed at top level
    import "./lib.cd";
    ^
